@startuml

' Enum definition
enum Role {
  admin
  fournisseur
  transporteur
}

class Utilisateur {
    +id : int
    +nom : string
    +email : string
    +mot_de_passe_hash : string
    +role : Role
}

class Produit {
    +id : int
    +nom : string
    +type : string
    +date_production : date
    +date_peremption : date
    +fournisseur_id : int
}

class Entrepot {
    +id : int
    +nom : string
}

class StockEntrepot {
    +id : int
    +produit_id : int
    +entrepot_id : int
    +qte : int
}

class MouvementProduit {
    +id : int
    +produit_id : int
    +source_entrepot_id : int
    +destination_entrepot_id : int
    +qte : int
    +date_mouvement : datetime
}

' Associations
Produit --> Utilisateur : fourni par
StockEntrepot --> Produit : contient
StockEntrepot --> Entrepot : stocké dans
MouvementProduit --> Produit : concerne
MouvementProduit --> Entrepot : source
MouvementProduit --> Entrepot : destination

@enduml
